# kraski_BOT

./: README.md  derufa_bot_single.py  main.py  pyproject.toml
aiohttp/: __init__.py
app/: .env.example  bot.py  config.py  texts.py
app/handlers/: admin.py  calc.py  catalog.py  lead.py  navigation.py  questions.py  start.py
app/keyboards/: catalog.py  common.py  questions.py
app/models/: catalog.py  state.py
app/services/: amocrm.py  calculator.py  catalog_storage.py  deep_links.py  excel_loader.py
app/utils/: formatting.py  pack_combiner.py  validation.py
tests/: test_amocrm.py  test_calculator.py  test_deeplink.py  test_excel_loader.py
