[tool.poetry]
name = "kraski-bot"
version = "0.1.0"
description = "Telegram bot calculator for DERUFA paint"
authors = ["AI Assistant <assistant@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4"
aiohttp = "^3.9"
pandas = "^2.2"
openpyxl = "^3.1"
pydantic = "^1.10"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
